--- a/app/app.css
+++ b/app/app.css
@@ -3,13 +3,43 @@
 @theme {
   --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-logo: "Gupter", serif;
+  --color-main: #c29e00;
+  --color-dark: #5d5d5d;
 }
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  @apply text-dark;
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+  /*  @media (prefers-color-scheme: light) {
+    color-scheme: light;
+  } */
+}
+
+#hero-image::before,
+#hero-image::after {
+  content: "";
+  position: absolute;
+  top: -150px;
+  left: 0;
+  width: 100vw !important;
+  height: 100%;
+  background: left 50% top 0px no-repeat url(../public/hero-bg.png);
+  background-size: 700px;
+  background-repeat: no-repeat;
+  @media (width >= 40rem) {
+    background-size: cover;
   }
+  z-index: -9999999;
+}
+#hero-image::after {
+  background: linear-gradient(0deg, #000000 0%, #0000 100%) !important;
+}
+.container {
+  @apply px-5 lg:px-8 mx-auto;
+}
+
+.booking-options-icon {
+  @apply text-main absolute left-2 top-[calc(50%+2px)] z-50;
 }
