--- a/app/app.css
+++ b/app/app.css
@@ -25,7 +25,7 @@ body {
   left: 0;
   width: 100vw !important;
   height: 100%;
-  background: left 50% top 0px no-repeat url(../public/hero-bg.png);
+  background: left 50% top 0px no-repeat url(../hero-bg.png);
   background-size: 700px;
   background-repeat: no-repeat;
   @media (width >= 40rem) {
@@ -42,4 +42,11 @@ body {
 
 .booking-options-icon {
   @apply text-main absolute left-2 top-[calc(50%+2px)] z-50;
+}
+
+.booking-options-wrapper {
+  @apply flex relative flex-col text-black/80;
+}
+.booking-options {
+  @apply pl-8 pr-2 rounded-[7px] border border-dark relative w-full;
 }
